[project]
name = "stickers"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmed-Mohiuddin-Shah",email = "mohiuddinlive@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-pptx (>=1.0.2,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)"
]

[tool.poetry]
packages = [{include = "stickers", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
